--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_GOOGLE_CLIENT_ID=132930070911-3ke7sjndmu6qbch3mj2salrugbisnkr2.apps.googleusercontent.com
-REACT_APP_GOOGLE_SPREADSHEET_ID=18MfoChIYBLybkZbMfcTcQdpV8V3AbhNW/edit?gid=725013901
+REACT_APP_GOOGLE_SPREADSHEET_ID=18MfoChIYBLybkZbMfcTcQdpV8V3AbhNW
