--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-oauth/google": "^0.13.4",
     "axios": "^1.13.5",
+    "google-auth-library": "^10.5.0",
     "googleapis": "^171.4.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.563.0",
